Fix bug, selection filter overlap with results view

--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,7 @@ body {
   border-right: 1px solid var(--elementInverse);
   caret-color: var(--element1);
   color: var(--element1);
+  font-size: 1.2rem;
 }
 
 /* https://stackoverflow.com/questions/3397113/how-to-remove-focus-border-outline-around-text-input-boxes-chrome */
@@ -183,6 +184,7 @@ body {
   display: none;
   position: absolute;
   top: 3rem;
+  z-index: 2;
 }
 
 .search__filter.open {
@@ -282,7 +284,7 @@ body {
 
 .btn--inline {
   display: flex;
-  width: 100%;
+  width: 2.75rem;
   align-items: center;
   padding: 0 0.2rem;
   border-radius: 8px;
